<resources>
    <string name="app_name">Famigo-Android</string>


    <!-- Header -->
    <string name="task_dashboard">Task Dashboard</string>
    <!--    <string name="add_task">Add Task</string>-->
    <string name="search">Search</string>

    <!-- Coins -->
    <string name="coins">Coins</string>
    <string name="coins_1250">1,250</string>

    <!-- My Tasks -->
    <string name="my_tasks">My Tasks</string>
    <string name="design_mockups_review">Design Mockups Review</string>
    <string name="deadline_2024_07_22">Deadline: 2024-07-22</string>
    <string name="points_1000">1000</string>
    <string name="assigned_alex">Assigned: Alex</string>

    <!-- Family Tasks -->
    <string name="family_tasks">Family Tasks</string>

    <!-- Navigation -->
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>

    <string name="calendar">Calendar</string>

    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="enter_task_title">Enter task title</string>

    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>

    <string name="deadline">Deadline</string>
    <string name="select_deadline">Select deadline</string>

    <string name="assigned_to">Assigned To</string>
    <string name="enter_assigned">Enter name</string>

    <string name="points">Points</string>
    <string name="enter_points">Enter points</string>

    <string name="back">Back</string>
    <string name="submit_task">Add Task</string>

    <string name="task_calendar_title">Task Calendar</string>

    <string name="project_kickoff_meeting">Project Kickoff Meeting</string>

    <string name="coins_50">50</string>

    <!-- Intro Slider -->
    <string name="intro_title_1">Welcome to Family Hub</string>
    <string name="intro_description_1">Manage tasks, set goals, and celebrate achievements together.</string>
    <string name="intro_title_2">Assign Tasks</string>
    <string name="intro_description_2">Select tasks for each family member.</string>
    <string name="intro_title_3">Meet your AI assistant</string>
    <string name="intro_description_3">Our AI helps you assign tasks, determine points, and suggest who should take on the task.</string>
    <string name="intro_title_4">You\'ve earned a reward!</string>
    <string name="intro_description_4">Your points have transformed into a gift box! Tap to open and see what you\'ve earned.</string>
    <string name="intro_next">Next</string>
    <string name="intro_get_started">Get Started</string>

    <!-- Tasks -->
    <string name="task_clean_room">Clean your room</string>
    <string name="task_homework">Do your homework</string>
    <string name="task_help_dinner">Help with dinner</string>
</resources>
